fix need: run to the first problem with same caption fore every image

--- a/data_and_training.ipynb
+++ b/data_and_training.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/TarnNished/deep_learning_final/blob/main/data_and_training.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "7c731f31",
       "metadata": {
         "id": "7c731f31"
@@ -23,10 +33,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f7ded12e-c540-4dd3-beb1-176a8b9d525f"
+        "outputId": "f2e98633-d211-4e22-87fc-0be30ac87925"
       },
       "id": "U7zxmpCuNQzM",
-      "execution_count": 44,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -39,14 +49,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 86,
       "id": "35540aa1",
       "metadata": {
         "id": "35540aa1"
       },
       "outputs": [],
       "source": [
-        "\n",
         "import os\n",
         "import json\n",
         "import random\n",
@@ -65,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 87,
       "id": "81a9a664",
       "metadata": {
         "id": "81a9a664"
@@ -99,10 +108,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ac3faf1-f229-4a0f-aec3-004f7079b2e4"
+        "outputId": "a76660a1-f5e0-423f-c744-8edb48f78e08"
       },
       "id": "woucEgC-Xr_G",
-      "execution_count": 47,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 89,
       "id": "6afc001f",
       "metadata": {
         "id": "6afc001f"
@@ -130,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 90,
       "id": "e898065a",
       "metadata": {
         "id": "e898065a"
@@ -171,10 +180,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2acd5a1-ad30-44e1-e343-b320c67559ad"
+        "outputId": "75f24039-1a71-468f-e3a0-b618b499a491"
       },
       "id": "dC8cE_roTZ00",
-      "execution_count": 50,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 92,
       "id": "c0c7fe39",
       "metadata": {
         "id": "c0c7fe39"
@@ -205,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 93,
       "id": "23fece58",
       "metadata": {
         "id": "23fece58"
@@ -234,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 94,
       "id": "8458a854",
       "metadata": {
         "id": "8458a854"
@@ -253,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 95,
       "id": "11ef13b9",
       "metadata": {
         "id": "11ef13b9"
@@ -280,25 +289,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 96,
       "id": "8071c903",
       "metadata": {
-        "id": "8071c903",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6ab33c8e-253a-426c-803e-e7e36d149d89"
+        "id": "8071c903"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py:627: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "transform = transforms.Compose([\n",
@@ -320,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 97,
       "id": "d5b17cd2",
       "metadata": {
         "id": "d5b17cd2"
@@ -391,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 98,
       "id": "d85dc277",
       "metadata": {
         "id": "d85dc277"
@@ -406,7 +402,7 @@
         "    p.requires_grad = False\n",
         "\n",
         "# Unfreeze last ResNet blocks (fine-tuning)\n",
-        "for p in encoder.backbone[-2:].parameters():\n",
+        "for p in encoder.backbone[-1:].parameters():\n",
         "    p.requires_grad = True\n",
         "\n",
         "criterion = nn.CrossEntropyLoss(ignore_index=vocab[\"<pad>\"])\n",
@@ -429,10 +425,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e80d858-3690-4c66-ebcd-772f852fd41d"
+        "outputId": "93e42a23-f559-469b-8b33-c8d4aa9de364"
       },
       "id": "KIOhKK5OkFmS",
-      "execution_count": 58,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 100,
       "id": "8527666b",
       "metadata": {
         "id": "8527666b",
@@ -455,14 +451,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 381
         },
-        "outputId": "86244b95-49f7-40cd-9fd4-76014bbb84a2"
+        "outputId": "5be2eadb-0ae5-4f52-ad0d-b05e805d9be9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 0/1012 [00:08<?, ?it/s]\n"
+            "  4%|▍         | 40/1012 [00:11<04:40,  3.47it/s]\n"
           ]
         },
         {
@@ -599,7 +595,8 @@
         "            out, (h, c) = decoder.lstm(emb, (h, c))\n",
         "            scores = decoder.fc(out.squeeze(1))\n",
         "\n",
-        "            predicted = scores.argmax(dim=1)\n",
+        "probs = torch.softmax(scores / 0.7, dim=1)\n",
+        "predicted = torch.multinomial(probs, 1).squeeze(1)\n",
         "            word = predicted.unsqueeze(1)\n",
         "\n",
         "            token_id = predicted.item()\n",
@@ -624,7 +621,7 @@
         "import matplotlib.pyplot as plt\n",
         "from PIL import Image\n",
         "\n",
-        "image_path = \"/content/drive/MyDrive/caption_data/Images/12830823_87d2654e31.jpg\"\n",
+        "image_path = \"/content/drive/MyDrive/caption_data/Images/35506150_cbdb630f4f.jpg\"\n",
         "\n",
         "# Sanity check: file exists\n",
         "print(\"Image exists:\", os.path.exists(image_path))\n",
@@ -653,7 +650,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
